// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu > can navigate with arrow keys 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_29_"
      aria-describedby="menu-_r_29_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with active props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_38_"
      aria-describedby="menu-_r_38_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_35_"
      aria-describedby="menu-_r_35_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2s_"
      aria-describedby="menu-_r_2s_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_32_"
      aria-describedby="menu-_r_32_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2v_"
      aria-describedby="menu-_r_2v_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders bottom 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2j_"
      aria-describedby="menu-_r_2j_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2m_"
      aria-describedby="menu-_r_2m_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2p_"
      aria-describedby="menu-_r_2p_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders top 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2g_"
      aria-describedby="menu-_r_2g_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders nested 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_1n_"
      aria-describedby="menu-_r_1n_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_7_"
      aria-describedby="menu-_r_7_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group and labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_b_"
      aria-describedby="menu-_r_b_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4_"
      aria-describedby="menu-_r_4_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_l_"
      aria-describedby="menu-_r_l_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_f_"
      aria-describedby="menu-_r_f_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_0_"
      aria-describedby="menu-_r_0_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_1k_"
      aria-describedby="menu-_r_1k_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with visible=false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2_"
      aria-describedby="menu-_r_2_"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple childs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple complex childs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;
